--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-  <title>UenrRoboticsClub.com</title>
+  <title>UENR Robotics Club</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -29,7 +29,7 @@
     <div class="container">
       <div class="row no-gutters d-flex align-items-center align-items-stretch">
         <div class="col-md-4 d-flex align-items-center py-4">
-          <a class="navbar-brand" href="index.html">UENR. <span>ROBOTICS CLUB</span></a>
+          <a class="navbar-brand" href="index.html">UENR <span>ROBOTICS CLUB</span></a>
         </div>
         <div class="col-lg-8 d-block">
           <div class="row d-flex">
@@ -74,10 +74,10 @@
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active"><a href="index.html" class="nav-link pl-0">Home</a></li>
           <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
-          <li class="nav-item"><a href="courses.html" class="nav-link">Projects</a></li>
-          <li class="nav-item"><a href="teacher.html" class="nav-link">The team</a></li>
-          <li class="nav-item"><a href="blog.html" class="nav-link">Events and Outreach</a></li>
-          <li class="nav-item"><a href="contact.html" class="nav-link">Donate</a></li>
+          <li class="nav-item"><a href="#" class="nav-link">Projects</a></li>
+          <li class="nav-item"><a href="#" class="nav-link">The team</a></li>
+          <li class="nav-item"><a href="#" class="nav-link">Events and Outreach</a></li>
+          <li class="nav-item"><a href="#" class="nav-link">Donate</a></li>
         </ul>
       </div>
     </div>
@@ -272,13 +272,13 @@
         <div class="col-md-6 col-lg-3 ftco-animate">
           <div class="staff">
             <div class="img-wrap d-flex align-items-stretch">
-              <div class="img align-self-stretch" style="background-image: url(images/teacher-1.jpg);"></div>
+              <div class="img align-self-stretch" style="background-image: url(images/Patron.jpg);"></div>
             </div>
             <div class="text pt-3 text-center">
               <h3>Mr Joseph Owusu</h3>
               <span class="position mb-2">Patron</span>
               <div class="faded">
-                <p>I am an ambitious workaholic, but apart from that, pretty simple person.</p>
+                <p>Placeholder Text.</p>
                 <ul class="ftco-social text-center">
                   <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
                   <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
@@ -292,13 +292,13 @@
         <div class="col-md-6 col-lg-3 ftco-animate">
           <div class="staff">
             <div class="img-wrap d-flex align-items-stretch">
-              <div class="img align-self-stretch" style="background-image: url(images/teacher-2.jpg);"></div>
+              <div class="img align-self-stretch" style="background-image: url(images/Josh_Nti.jpg);"></div>
             </div>
             <div class="text pt-3 text-center">
               <h3>Nti Joshua</h3>
               <span class="position mb-2">President</span>
               <div class="faded">
-                <p>I am an ambitious workaholic, but apart from that, pretty simple person.</p>
+                <p>Placeholder Text.</p>
                 <ul class="ftco-social text-center">
                   <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
                   <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
@@ -312,13 +312,13 @@
         <div class="col-md-6 col-lg-3 ftco-animate">
           <div class="staff">
             <div class="img-wrap d-flex align-items-stretch">
-              <div class="img align-self-stretch" style="background-image: url(images/teacher-3.jpg);"></div>
+              <div class="img align-self-stretch" style="background-image: url(images/Benedict_Adu.jpg);"></div>
             </div>
             <div class="text pt-3 text-center">
               <h3>Benedict Adu</h3>
               <span class="position mb-2">Vice President</span>
               <div class="faded">
-                <p>I am an ambitious workaholic, but apart from that, pretty simple person.</p>
+                <p>Placeholder Text.</p>
                 <ul class="ftco-social text-center">
                   <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
                   <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
@@ -332,13 +332,13 @@
         <div class="col-md-6 col-lg-3 ftco-animate">
           <div class="staff">
             <div class="img-wrap d-flex align-items-stretch">
-              <div class="img align-self-stretch" style="background-image: url(images/bg_10.JPG);"></div>
+              <div class="img align-self-stretch" style="background-image: url(images/Reginald_Nyarko.jpg);"></div>
             </div>
             <div class="text pt-3 text-center">
               <h3>Reginald Nyarko</h3>
               <span class="position mb-2">Organiser</span>
               <div class="faded">
-                <p>I am an ambitious workaholic, but apart from that, pretty simple person.</p>
+                <p>Placeholder Text.</p>
                 <ul class="ftco-social text-center">
                   <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
                   <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
@@ -352,13 +352,13 @@
                <div class="col-md-6 col-lg-3 ftco-animate">
           <div class="staff">
             <div class="img-wrap d-flex align-items-stretch">
-              <div class="img align-self-stretch" style="background-image: url(images/teacher-4.jpg);"></div>
+              <div class="img align-self-stretch" style="background-image: url(images/King_Lucas.jpg);"></div>
             </div>
             <div class="text pt-3 text-center">
               <h3>King Lucas</h3>
               <span class="position mb-2">Secretary</span>
               <div class="faded">
-                <p>I am an ambitious workaholic, but apart from that, pretty simple person.</p>
+                <p>Placeholder Text.</p>
                 <ul class="ftco-social text-center">
                   <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
                   <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
@@ -372,13 +372,13 @@
                <div class="col-md-6 col-lg-3 ftco-animate">
           <div class="staff">
             <div class="img-wrap d-flex align-items-stretch">
-              <div class="img align-self-stretch" style="background-image: url(images/teacher-4.jpg);"></div>
+              <div class="img align-self-stretch" style="background-image: url(images/Mena_Hayford.jpg);"></div>
             </div>
             <div class="text pt-3 text-center">
               <h3>Mena</h3>
               <span class="position mb-2">Financial Secretary</span>
               <div class="faded">
-                <p>I am an ambitious workaholic, but apart from that, pretty simple person.</p>
+                <p>Placeholder Text.</p>
                 <ul class="ftco-social text-center">
                   <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
                   <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
@@ -395,30 +395,10 @@
               <div class="img align-self-stretch" style="background-image: url(images/teacher-4.jpg);"></div>
             </div>
             <div class="text pt-3 text-center">
-              <h3>.......</h3>
+              <h3>Randy</h3>
               <span class="position mb-2">PRO</span>
               <div class="faded">
-                <p>I am an ambitious workaholic, but apart from that, pretty simple person.</p>
-                <ul class="ftco-social text-center">
-                  <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
-                  <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
-                  <li class="ftco-animate"><a href="#"><span class="icon-google-plus"></span></a></li>
-                  <li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a></li>
-                </ul>
-              </div>
-            </div>
-          </div>
-        </div>
-               <div class="col-md-6 col-lg-3 ftco-animate">
-          <div class="staff">
-            <div class="img-wrap d-flex align-items-stretch">
-              <div class="img align-self-stretch" style="background-image: url(images/teacher-4.jpg);"></div>
-            </div>
-            <div class="text pt-3 text-center">
-              <h3>.....</h3>
-              <span class="position mb-2">Materials Manager</span>
-              <div class="faded">
-                <p>I am an ambitious workaholic, but apart from that, pretty simple person.</p>
+                <p>Placeholder Text.</p>
                 <ul class="ftco-social text-center">
                   <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
                   <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
@@ -443,7 +423,7 @@
           <div class="py-md-5">
             <div class="heading-section heading-section-white ftco-animate mb-5">
               <h2 class="mb-4">Testimonial from our patron</h2>
-              <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+              <p>Placeholder Text.</p>
             </div>
             
           </div>
@@ -452,113 +432,32 @@
     </div>
   </section>
 
-  <section class="ftco-section bg-light">
-    <div class="container">
-      <div class="row justify-content-center mb-5 pb-2">
-        <div class="col-md-8 text-center heading-section ftco-animate">
-          <h2 class="mb-4"><span>Recent</span> Blog</h2>
-          <p>Separated they live in. A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country</p>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-6 col-lg-4 ftco-animate">
-          <div class="blog-entry">
-            <a href="blog-single.html" class="block-20 d-flex align-items-end" style="background-image: url('images/image_1.jpg');">
-              <div class="meta-date text-center p-2">
-                <span class="day">26</span>
-                <span class="mos">June</span>
-                <span class="yr">2019</span>
-              </div>
-            </a>
-            <div class="text bg-white p-4">
-              <h3 class="heading"><a href="#">Skills To Develop Your Child Memory</a></h3>
-              <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-              <div class="d-flex align-items-center mt-4">
-                <p class="mb-0"><a href="#" class="btn btn-primary">Read More <span class="ion-ios-arrow-round-forward"></span></a></p>
-                <p class="ml-auto mb-0">
-                  <a href="#" class="mr-2">Admin</a>
-                  <a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a>
-                </p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-6 col-lg-4 ftco-animate">
-          <div class="blog-entry">
-            <a href="blog-single.html" class="block-20 d-flex align-items-end" style="background-image: url('images/image_2.jpg');">
-              <div class="meta-date text-center p-2">
-                <span class="day">26</span>
-                <span class="mos">June</span>
-                <span class="yr">2019</span>
-              </div>
-            </a>
-            <div class="text bg-white p-4">
-              <h3 class="heading"><a href="#">Skills To Develop Your Child Memory</a></h3>
-              <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-              <div class="d-flex align-items-center mt-4">
-                <p class="mb-0"><a href="#" class="btn btn-primary">Read More <span class="ion-ios-arrow-round-forward"></span></a></p>
-                <p class="ml-auto mb-0">
-                  <a href="#" class="mr-2">Admin</a>
-                  <a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a>
-                </p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-6 col-lg-4 ftco-animate">
-          <div class="blog-entry">
-            <a href="blog-single.html" class="block-20 d-flex align-items-end" style="background-image: url('images/image_3.jpg');">
-              <div class="meta-date text-center p-2">
-                <span class="day">26</span>
-                <span class="mos">June</span>
-                <span class="yr">2019</span>
-              </div>
-            </a>
-            <div class="text bg-white p-4">
-              <h3 class="heading"><a href="#">Skills To Develop Your Child Memory</a></h3>
-              <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-              <div class="d-flex align-items-center mt-4">
-                <p class="mb-0"><a href="#" class="btn btn-primary">Read More <span class="ion-ios-arrow-round-forward"></span></a></p>
-                <p class="ml-auto mb-0">
-                  <a href="#" class="mr-2">Admin</a>
-                  <a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a>
-                </p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  
-
   <section class="ftco-gallery">
     <div class="container-wrap">
       <div class="row no-gutters">
         <div class="col-md-3 ftco-animate">
-          <a href="images/bg_9.jpg" class="gallery image-popup img d-flex align-items-center" style="background-image: url(images/bg_9.jpg);">
+          <a href="images/club_image_1.jpg" class="gallery image-popup img d-flex align-items-center" style="background-image: url(images/bg_9.jpg);">
             <div class="icon mb-4 d-flex align-items-center justify-content-center">
               <span class="icon-instagram"></span>
             </div>
           </a>
         </div>
         <div class="col-md-3 ftco-animate">
-          <a href="images/bg_7.png" class="gallery image-popup img d-flex align-items-center" style="background-image: url(images/bg_7.png);">
+          <a href="images/club_image_2.jpg" class="gallery image-popup img d-flex align-items-center" style="background-image: url(images/bg_7.png);">
             <div class="icon mb-4 d-flex align-items-center justify-content-center">
               <span class="icon-instagram"></span>
             </div>
           </a>
         </div>
         <div class="col-md-3 ftco-animate">
-          <a href="images/bg_6.jpg" class="gallery image-popup img d-flex align-items-center" style="background-image: url(images/bg_6.jpg);">
+          <a href="images/club_image_3.jpg" class="gallery image-popup img d-flex align-items-center" style="background-image: url(images/bg_6.jpg);">
             <div class="icon mb-4 d-flex align-items-center justify-content-center">
               <span class="icon-instagram"></span>
             </div>
           </a>
         </div>
         <div class="col-md-3 ftco-animate">
-          <a href="images/bg_8.jpg" class="gallery image-popup img d-flex align-items-center" style="background-image: url(images/bg_8.jpg);">
+          <a href="images/club_image_4.jpg" class="gallery image-popup img d-flex align-items-center" style="background-image: url(images/bg_8.jpg);">
             <div class="icon mb-4 d-flex align-items-center justify-content-center">
               <span class="icon-instagram"></span>
             </div>
@@ -586,15 +485,14 @@
         </div>
         <div class="col-md-6 col-lg-3">
           <div class="ftco-footer-widget mb-5">
-            <h2 class="ftco-heading-2">Recent Blog</h2>
+            <h2 class="ftco-heading-2">Projects</h2>
             <div class="block-21 mb-4 d-flex">
               <a class="blog-img mr-4" style="background-image: url(images/image_1.jpg);"></a>
               <div class="text">
                 <h3 class="heading"><a href="#">Integrating Arduino Sensors to build a Smart Home Model</a></h3>
                 <div class="meta">
-                  <div><a href="#"><span class="icon-calendar"></span> June 27, 2019</a></div>
-                  <div><a href="#"><span class="icon-person"></span> Admin</a></div>
-                  <div><a href="#"><span class="icon-chat"></span> 19</a></div>
+                  <div><a href="#"><span class="icon-calendar"></span>2019</a></div>
+                  <div><a href="#"><span class="icon-gear"></span> Project</a></div>
                 </div>
               </div>
             </div>
@@ -603,9 +501,8 @@
               <div class="text">
                 <h3 class="heading"><a href="#">Building a vision aided Delivery drone</a></h3>
                 <div class="meta">
-                  <div><a href="#"><span class="icon-calendar"></span> June 27, 2019</a></div>
-                  <div><a href="#"><span class="icon-person"></span> Admin</a></div>
-                  <div><a href="#"><span class="icon-chat"></span> 19</a></div>
+                  <div><a href="#"><span class="icon-calendar"></span> 2020</a></div>
+                  <div><a href="#"><span class="icon-gear"></span> Project</a></div>
                 </div>
               </div>
             </div>
@@ -642,18 +539,6 @@
               <li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a></li>
             </ul>
           </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-12 text-center">
-
-          <p>
-            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-            Copyright &copy;<script>
-              document.write(new Date().getFullYear());
-            </script> All rights reserved | This template is made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-          </p>
         </div>
       </div>
     </div>
